Bug 55484 - [sna] CapLast bug exposed by xterm using PolyLine instead of PolyRectangle
Summary: [sna] CapLast bug exposed by xterm using PolyLine instead of PolyRectangle
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-01 02:38 UTC by Joe Peterson
Modified: 2013-02-01 18:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Screenshot showing xterm cursor issue (missing lower-right pixel) (10.03 KB, image/png)
2012-10-01 02:38 UTC, Joe Peterson
no flags Details

Description Joe Peterson 2012-10-01 02:38:21 UTC
Created attachment 67908 [details]
Screenshot showing xterm cursor issue (missing lower-right pixel)

When using SNA instead of UXA in the xf86-video-intel driver, I see the following issues:

1) In an unfocused xterm window, where the block cursor is an empty rectangle, the lower right pixel is missing.

2) In Chromium, moving the mouse in a tab causes strange, blocky flickering of parts of the text in that tab.

Note that #1 also is mentioned in the following Arch Linux bug: https://bugs.archlinux.org/task/30983

I also filed a Gentoo bug here: https://bugs.gentoo.org/show_bug.cgi?id=436734 (Note that I originally thought this was version-dependent but later realized it was UXA/SNA-dependent)

From lspci: VGA compatible controller: Intel Corporation Mobile 4 Series Chipset Integrated Graphics Controller (rev 07)

I have attached a screenshot showing #1 above.
Comment 1 Chris Wilson 2012-10-01 07:10:33 UTC
Two bugs, the first is definite and I expected to turn up at some point. But not in xterm, expecially when there is an explicit primitive for xterm to use there instead of manually drawing the outline!

The second bug needs a second report, and a lot more details since it is not something I have observed at all.
Comment 2 Joe Peterson 2012-10-01 11:48:47 UTC
Agreed regarding "symtom #2".  I had originally grouped these, since they showed up at the same time, but now that I realize both are SNA-related, it makes sense they are independent.  Hard to get a screenshot of the second issue, since it fluctuates as the mouse moves, but I will submit a new bug and collect as much info as I can.
Comment 3 Joe Peterson 2012-10-01 14:46:48 UTC
New bug created for symptom #2: https://bugs.freedesktop.org/show_bug.cgi?id=55500
Comment 4 Carsten Mattner 2013-01-19 13:29:32 UTC
No progress?
Comment 5 Chris Wilson 2013-01-22 09:28:57 UTC
Meh, I had it categorised as a different bug and was reserving it until I had the pleasure of reviewing the line drawing code.

commit 2d92d8ec562cb1e6b9dca28074adca670734233c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 22 09:24:04 2013 +0000

    sna: Extend rectangular PolyLines to cover corner pixels on ccw paths
    
    Reported-by: Joe Peterson <joe@skyrush.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55484
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 6 Carsten Mattner 2013-02-01 18:33:46 UTC
2.21.0 looks good.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.