sna: Extend rectangular PolyLines to cover corner pixels on ccw paths

Reported-by: Joe Peterson <joe@skyrush.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55484
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>